# wcs-ocaml

./: .envrc  .gitignore  Makefile  dune  dune-project  wcs-lib.opam.locked  wcs.opam  wcs.opam.locked
examples/: dune  example.re  fact.re  knockknock.re
examples/rulebot/src/: cnl2cnl.re  cnl_engine.re  cnl_engine.rei  cnl_instr_t.ml  cnl_instr_t.re  cnl_instr_t.rei  cnl_print.re  cnl_print.rei  cnl_samples.re  cnl_samples.rei  cnl_t.ml  cnl_t.re  cnl_t.rei  cnl_util.ml  cnl_util.re  cnl_util.rei  ctx.ml  ctx.re  ctx.rei  deriving_intf.re  dialog_util.ml  dialog_util.re  dialog_util.rei  io_util.re  io_util.rei  rulebot_main.re  rulebot_main.rei  slack_io.re  slack_io.rei
examples/rulebot/src/bmd/: bmd_samples.re  bmd_samples.rei  bmd_spec_to_bmd.re  bmd_spec_to_bmd.rei  bmd_t.rei  bmd_to_wcs_entities.re  bmd_util.re  io_to_bmd.re  io_to_bmd.rei
examples/rulebot/src/parser/: lexer_util.re  lexer_util.rei  parser_util.re  parser_util.rei
examples/rulebot/src/workspaces/: ws_accept.re  ws_actn.re  ws_common.re  ws_cond.re  ws_cond_continue.re  ws_dispatch.re  ws_expr.re  ws_select_example.re  ws_select_expr.re  ws_then.re  ws_when.re
wcs-cli/: dune  wcs_cli.re  wcs_cmd.re
wcs-lib/: Makefile  atdgen_to_rml.re  context.re  context.rei  context_spel.re  context_spel.rei  dialog_t.re  dune  json_spel.re  json_spel.rei  json_spel_j.re  json_spel_j.rei  json_spel_t.ml  json_spel_t.re  json_spel_t.rei  json_t.ml  json_t.mli  json_t.re  json_t.rei  log.re  log.rei  spel_j.re  spel_j.rei  spel_parse.re  spel_parse.rei  spel_print.re  spel_print.rei  spel_sedlexer_j.re  (+9 more)
