;; This file is part of the Watson Conversation Service OCaml API project.
;;
;; Copyright 2016-2017 IBM Corporation
;;
;; Licensed under the Apache License, Version 2.0 (the "License");
;; you may not use this file except in compliance with the License.
;; You may obtain a copy of the License at
;;
;; http://www.apache.org/licenses/LICENSE-2.0
;;
;; Unless required by applicable law or agreed to in writing, software
;; distributed under the License is distributed on an "AS IS" BASIS,
;; WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
;; See the License for the specific language governing permissions and
;; limitations under the License.

(executables
 (modes byte exe)
 (names example knockknock fact)
 (libraries wcs-lib))

(rule
 (alias runtest)
 (deps
  (:< example.exe))
 (action
  (run %{<})))

(rule
 (alias runtest)
 (deps
  (:< knockknock.exe))
 (action
  (run %{<} -print)))

(rule
 (alias runtest)
 (deps
  (:< fact.exe))
 (action
  (run %{<} -print)))
